--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,3 +1,6 @@
+source 'https://mirrors.tuna.tsinghua.edu.cn/git/CocoaPods/Specs.git'
+source 'https://github.com/guojin2020/GDPods.git'
+
 platform :ios, '9.0'
 
 use_frameworks!
